[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-alert-triage"
version = "1.0.0"
description = "SRE alert triage environment for AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "openai>=1.52.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["server"]
